[project]
name = "jsonlt-javascript-dev"
version = "0.0.0"
description = "Development dependencies for jsonlt-javascript."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["codespell>=2.4.1", "prek>=0.2.23", "vale>=3.13.0.0", "yamllint>=1.37.1"]
release = ["cyclonedx-bom>=7.2.1"]

[tool.codespell]
skip = "./pnpm-lock.yaml,./uv.lock,./coverage.xml,./coverage.json,./tmp,./dist,./node_modules,./.venv,*.cdx.json"
ignore-words-list = "AKS,CrossReference,Nd,Wont,WONT,devlop"
